--- a/package.json
+++ b/package.json
@@ -1,22 +1,37 @@
 {
-  "name": "beat-analytics",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@types/node": "20.2.3",
-    "@types/react": "18.2.6",
-    "@types/react-dom": "18.2.4",
-    "eslint": "8.41.0",
-    "eslint-config-next": "13.4.3",
-    "next": "13.4.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "typescript": "5.0.4"
-  }
+    "name": "beat-analytics",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint",
+        "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md,css}\""
+    },
+    "dependencies": {
+        "@types/node": "20.2.3",
+        "@types/react": "18.2.6",
+        "@types/react-dom": "18.2.4",
+        "eslint": "^8.41.0",
+        "eslint-config-next": "^13.4.3",
+        "next": "13.4.3",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "typescript": "5.0.4"
+    },
+    "devDependencies": {
+        "@typescript-eslint/eslint-plugin": "^5.59.7",
+        "@typescript-eslint/parser": "^5.59.7",
+        "css-loader": "^6.7.4",
+        "eslint-config-prettier": "^8.8.0",
+        "eslint-plugin-import": "^2.27.5",
+        "eslint-plugin-prettier": "^4.2.1",
+        "eslint-plugin-react": "^7.32.2",
+        "eslint-plugin-react-hooks": "^4.6.0",
+        "prettier": "^2.8.8",
+        "sass": "^1.62.1",
+        "sass-loader": "^13.3.0",
+        "style-loader": "^3.3.3"
+    }
 }
