--- a/.eslintrc
+++ b/.eslintrc
@@ -25,6 +25,7 @@
         }
     },
     "rules": {
-        "@typescript-eslint/no-non-null-assertion": "off"
+        "@typescript-eslint/no-non-null-assertion": "off",
+        "@typescript-eslint/no-explicit-any": "warn"
     }
 }
